EV-15 #time 2h Split CombinedTab into 2 files, with correct info for both DBI and IRM.  Added a sort to the main header gridpanel by status then date.

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -117,7 +117,8 @@
     <Content Include="Views\Modules\DailyActivity\ImageLoader\ImageLoader.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChemicalTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx" />
-    <Content Include="Views\Modules\DailyActivity\umCombinedTab.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umCombinedTab_DBI.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umCombinedTab_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umDailyActivity.aspx" />
     <Content Include="Views\Modules\DailyActivity\umEmployeesTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umEquipmentTab.aspx" />
@@ -228,12 +229,19 @@
     <Compile Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx.designer.cs">
       <DependentUpon>umChoosePerDiem.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umCombinedTab.aspx.cs">
-      <DependentUpon>umCombinedTab.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umCombinedTab_DBI.aspx.cs">
+      <DependentUpon>umCombinedTab_DBI.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umCombinedTab.aspx.designer.cs">
-      <DependentUpon>umCombinedTab.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umCombinedTab_DBI.aspx.designer.cs">
+      <DependentUpon>umCombinedTab_DBI.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umCombinedTab_IRM.aspx.cs">
+      <DependentUpon>umCombinedTab_IRM.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umCombinedTab_IRM.aspx.designer.cs">
+      <DependentUpon>umCombinedTab_IRM.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umDailyActivity.aspx.cs">
       <DependentUpon>umDailyActivity.aspx</DependentUpon>
