EV-97 #time 2h 30m #close Split umSubmitActivity to _DBI and _IRM with specific fields.

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -128,7 +128,8 @@
     <Content Include="Views\Modules\DailyActivity\umManageExisting.aspx" />
     <Content Include="Views\Modules\DailyActivity\umProductionTab_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umProductionTab_IRM.aspx" />
-    <Content Include="Views\Modules\DailyActivity\umSubmitActivity.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umSubmitActivity_DBI.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umSubmitActivity_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umWeatherTab.aspx" />
     <Content Include="Views\Modules\Security\umSecurityLogList.aspx" />
     <Content Include="Views\Modules\Security\umSecurityActivityList.aspx" />
@@ -306,12 +307,19 @@
     <Compile Include="Views\Modules\DailyActivity\umProductionTab_IRM.aspx.designer.cs">
       <DependentUpon>umProductionTab_IRM.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umSubmitActivity.aspx.cs">
-      <DependentUpon>umSubmitActivity.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umSubmitActivity_DBI.aspx.cs">
+      <DependentUpon>umSubmitActivity_DBI.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umSubmitActivity.aspx.designer.cs">
-      <DependentUpon>umSubmitActivity.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umSubmitActivity_DBI.aspx.designer.cs">
+      <DependentUpon>umSubmitActivity_DBI.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umSubmitActivity_IRM.aspx.cs">
+      <DependentUpon>umSubmitActivity_IRM.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umSubmitActivity_IRM.aspx.designer.cs">
+      <DependentUpon>umSubmitActivity_IRM.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umWeatherTab.aspx.cs">
       <DependentUpon>umWeatherTab.aspx</DependentUpon>
