EV-15 #time 1h split umInventoryTab_DBI to allow window to break frame.

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -118,6 +118,7 @@
     <Content Include="Views\Modules\DailyActivity\umAddEditChemical.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditEmployee.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditEquipment.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umAddEditInventory_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChemicalTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx" />
     <Content Include="Views\Modules\DailyActivity\umCombinedTab_DBI.aspx" />
@@ -239,6 +240,13 @@
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umAddEditEquipment.aspx.designer.cs">
       <DependentUpon>umAddEditEquipment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditInventory_DBI.aspx.cs">
+      <DependentUpon>umAddEditInventory_DBI.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditInventory_DBI.aspx.designer.cs">
+      <DependentUpon>umAddEditInventory_DBI.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umChemicalTab.aspx.cs">
       <DependentUpon>umChemicalTab.aspx</DependentUpon>
