--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -119,6 +119,7 @@
     <Content Include="Views\Modules\DailyActivity\umAddEditEmployee.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditEquipment.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditInventory_DBI.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umAddEditInventory_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChemicalTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx" />
     <Content Include="Views\Modules\DailyActivity\umCombinedTab_DBI.aspx" />
@@ -247,6 +248,13 @@
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umAddEditInventory_DBI.aspx.designer.cs">
       <DependentUpon>umAddEditInventory_DBI.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditInventory_IRM.aspx.cs">
+      <DependentUpon>umAddEditInventory_IRM.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditInventory_IRM.aspx.designer.cs">
+      <DependentUpon>umAddEditInventory_IRM.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umChemicalTab.aspx.cs">
       <DependentUpon>umChemicalTab.aspx</DependentUpon>
