EV-15 #time 1h 10m Update umProductionTab_DBI to allow window to break out of frame.

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -120,6 +120,7 @@
     <Content Include="Views\Modules\DailyActivity\umAddEditEquipment.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditInventory_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditInventory_IRM.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umAddEditProduction_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChemicalTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx" />
     <Content Include="Views\Modules\DailyActivity\umCombinedTab_DBI.aspx" />
@@ -255,6 +256,13 @@
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umAddEditInventory_IRM.aspx.designer.cs">
       <DependentUpon>umAddEditInventory_IRM.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditProduction_DBI.aspx.cs">
+      <DependentUpon>umAddEditProduction_DBI.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditProduction_DBI.aspx.designer.cs">
+      <DependentUpon>umAddEditProduction_DBI.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umChemicalTab.aspx.cs">
       <DependentUpon>umChemicalTab.aspx</DependentUpon>
