--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -122,6 +122,7 @@
     <Content Include="Views\Modules\DailyActivity\umAddEditInventory_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditProduction_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditProduction_IRM.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umAddEditWeather.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChemicalTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx" />
     <Content Include="Views\Modules\DailyActivity\umCombinedTab_DBI.aspx" />
@@ -271,6 +272,13 @@
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umAddEditProduction_IRM.aspx.designer.cs">
       <DependentUpon>umAddEditProduction_IRM.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditWeather.aspx.cs">
+      <DependentUpon>umAddEditWeather.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umAddEditWeather.aspx.designer.cs">
+      <DependentUpon>umAddEditWeather.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umChemicalTab.aspx.cs">
       <DependentUpon>umChemicalTab.aspx</DependentUpon>
