EV-120 Added Audit table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -89,6 +89,9 @@
     <Compile Include="CROSSING_SUB_DIVISION.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAILY_ACTIVITY_AUDIT.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAILY_ACTIVITY_CHEMICAL_MIX.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
