EV-124 Added new table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -193,6 +193,9 @@
     <Compile Include="PA_LOCATIONS_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="PA_PERIODS_ALL.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="PA_ROLES_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
