--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -140,6 +140,7 @@
     <Content Include="Views\Modules\DailyActivity\umInventoryTab_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umInventoryTab_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umManageExisting.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umPostMultipleWindow.aspx" />
     <Content Include="Views\Modules\DailyActivity\umProductionTab_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umProductionTab_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity_DBI.aspx" />
@@ -362,6 +363,13 @@
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umManageExisting.aspx.designer.cs">
       <DependentUpon>umManageExisting.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umPostMultipleWindow.aspx.cs">
+      <DependentUpon>umPostMultipleWindow.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umPostMultipleWindow.aspx.designer.cs">
+      <DependentUpon>umPostMultipleWindow.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umProductionTab_DBI.aspx.cs">
       <DependentUpon>umProductionTab_DBI.aspx</DependentUpon>
