--- a/DBI.Mobile.EMS/Web.config
+++ b/DBI.Mobile.EMS/Web.config
@@ -10,7 +10,9 @@
     <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
- 
+  <connectionStrings>
+    <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0056.dbiservices.com:1522/AppDev;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;"providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
