Compile line was missing from csproj file, causing DBI.Web.EMS to not load.

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -232,6 +232,7 @@
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umSupplemental.aspx.designer.cs">
       <DependentUpon>umSupplemental.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umCustomerSurveyAdmin.aspx.cs">
       <DependentUpon>umCustomerSurveyAdmin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
