EV-161 Created Customer Survey Option table and added to edmx file

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -124,6 +124,9 @@
     <Compile Include="CUSTOMER_SURVEY_FORMS_COMP.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="CUSTOMER_SURVEY_OPTIONS.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="CUSTOMER_SURVEY_QUESTIONS.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
