--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -268,6 +268,9 @@
     <Compile Include="SYS_LOG_CT.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="SYS_MOBILE_DEVICES.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="SYS_MOBILE_NOTIFICATIONS.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
