Changed to PCL05

--- a/DBI.Mobile.Notifications/App.config
+++ b/DBI.Mobile.Notifications/App.config
@@ -9,6 +9,6 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0056.dbiservices.com:1522/AppDev;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0056.dbiservices.com:1526/pcl05;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
