EV-15 #time 20h Permissions Reworking.

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -184,7 +184,11 @@
     <Compile Include="DataFactory\Projects\Projects.cs" />
     <Compile Include="DataFactory\Security\Activity.cs" />
     <Compile Include="DataFactory\Security\Logger.cs" />
+    <Compile Include="DataFactory\Security\MenuItems.cs" />
+    <Compile Include="DataFactory\Security\Modules.cs" />
+    <Compile Include="DataFactory\Security\Permissions.cs" />
     <Compile Include="DataFactory\Security\UserActivity.cs" />
+    <Compile Include="DataFactory\Security\UserPermissions.cs" />
     <Compile Include="DataFactory\StaticLists.cs" />
     <Compile Include="DataFactory\Security\UserInformation.cs" />
     <Compile Include="DataFactory\Utilities\GenericData.cs" />
